2004-02-23  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

	* POTFILES.in: Added missing files.

2004-02-23  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-02-16  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation.

2004-02-16  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* ja.po: Updated Japanese translation.

2004-02-12  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

2004-02-11  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* ja.po: Added Japanese translation.

2004-02-09  Geert Stappers  <stappers@stappers.nl>

	* POTFILES.in:
	The xds.in files moved to their own directory.

2004-02-07  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Daniel van Eeden.

2004-02-07  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-02-06  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-02-05  Kostas Papadimas <pkst@gnome.org>

	* el.po: Updated  Greek translation.

2004-02-04  Christian Neumair  <chris@gnome-de.org>

	* de.po: Updated German translation.

2004-02-01  Robert Sedak  <robert.sedak@sk.htnet.hr>

	* hr.po: Updated Croatian translation.

2004-01-31  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.

2004-01-29  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated translation.

2004-01-25  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Daniel van Eeden.

2004-01-23  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

2004-01-21  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-01-20  Geert Stappers  <stappers@stappers.nl>

	* POTFILES.in:
	Regenerated, with uss/mkpotfilesin version 1.6,
	this will effect the .po files.

2004-01-19  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Daniel van Eeden.
