@@ -1,5 +1,5 @@
-# Generated by upstream script uss/mkpotfilesin
 # List of source files containing translatable strings.
+# Generated by upstream script uss/mkpotfilesin
 data/conglomerate.desktop.in
 data/conglomerate.keys.in
 data/conglomerate.schemas.in
@@ -153,6 +153,7 @@ src/icon_openfile.c
 src/icon_submit.c
 src/ilogo.c
 src/main.c
+src/plugin-abiword.c
 src/plugin-admonition-node-element.c
 src/plugin-admonition.c
 src/plugin-cleanup-source.c
@@ -162,6 +163,7 @@ src/plugin-docbook.c
 src/plugin-dtd.c
 src/plugin-empty.c
 src/plugin-fo.c
+src/plugin-html.c
 src/plugin-lists-area-listitem.c
 src/plugin-lists-node-element-listitem.c
 src/plugin-lists.c
@@ -169,8 +171,10 @@ src/plugin-paragraph-area-paragraph.c
 src/plugin-paragraph-node-element-paragraph.c
 src/plugin-paragraph.c
 src/plugin-random.c
+src/plugin-relaxng.c
 src/plugin-save-dispspec.c
 src/plugin-sgml.c
+src/plugin-tei.c
 src/plugin-templates.c
 src/plugin-tests.c
 src/plugin-validate.c
