@@ -1,3 +1,9 @@
+2004-02-23  Geert Stappers  <stappers@stappers.nl>
+
+	* POTFILES.in:
+	Regenerated, with uss/mkpotfilesin version 1.7,
+	this will effect the .po files.
+
 2004-02-23  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
